syntax = "proto3";

package keyauth.mconf;
option go_package = "github.com/infraboard/keyauth/pkg/mconf";

import "pkg/mconf/pb/request.proto";
import "pkg/mconf/pb/conf.proto";

// MicroConfigService 服务
service MicroConfigService {
	rpc CreateGroup(CreateGroupRequest) returns(Group);
	rpc QueryGroup(QueryGroupRequest) returns(GroupSet);
	rpc DeleteGroup(DeleteGroupRequest) returns(Group);
	rpc QueryItem(QueryItemRequest) returns(ItemSet);
	rpc AddItemToGroup(AddItemToGroupRequest) returns(ItemSet);
	rpc RemoveItemFromGroup(RemoveItemFromGroupRequest) returns(ItemSet);
}